--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 </head>
 <body>
     <header>
-        <img class="logo" src="assets/Booki@3x.png" alt="Logo de Booki">
+        <img class="logo" src="assets/logo/Booki@3x.png" alt="Logo de Booki">
         <nav class="navbar">
             <ul class="navbar-nav">
                 <li class="nav__item">
@@ -76,7 +76,13 @@
                 <h2>Hébergements à Marseille</h2>
                 <article class="card card--border">
                     <a href="#">
-                        <img class="card__img" src="assets/marcus-loke-WQJvWU_HZFo-unsplash.jpg" alt="Chambre dortoire avec vue sur rue de l'Auberge La Canebière" >
+                        <img 
+                            class="card__img" 
+                            srcset="assets/hebergements/1_xlarge/marcus-loke-WQJvWU_HZFo-unsplash.jpg 5993w, assets/hebergements/2_large/marcus-loke-WQJvWU_HZFo-unsplash.jpg 2997w, assets/hebergements/3_medium/marcus-loke-WQJvWU_HZFo-unsplash.jpg 1499w, assets/hebergements/4_small/marcus-loke-WQJvWU_HZFo-unsplash.jpg 750w"
+                            src="assets/hebergements/4_small/marcus-loke-WQJvWU_HZFo-unsplash.jpg" 
+                            sizes="(max-width: 768px) 750px, (max-width: 992px) 1499px, (min-width: 992px) 2997px, 5993px"
+                            alt="Chambre dortoire avec vue sur rue de l'Auberge La Canebière" 
+                        >
                         <div class="card__content">
                             <h3>Auberge La Canebière</h3>
                             <p>Nuit à partir de 25€</p>
@@ -92,7 +98,13 @@
                 </article>
                 <article class="card card--border">
                     <a href="#">
-                        <img class="card__img" src="assets/fred-kleber-gTbaxaVLvsg-unsplash.jpg" alt="Chambre lit double et lit simple de l'Hôtel du port" >
+                        <img 
+                            class="card__img" 
+                            srcset="assets/hebergements/1_xlarge/fred-kleber-gTbaxaVLvsg-unsplash.jpg 5993w, assets/hebergements/2_large/fred-kleber-gTbaxaVLvsg-unsplash.jpg 2997w, assets/hebergements/3_medium/fred-kleber-gTbaxaVLvsg-unsplash.jpg 1499w, assets/hebergements/4_small/fred-kleber-gTbaxaVLvsg-unsplash.jpg 750w"
+                            src="assets/hebergements/4_small/fred-kleber-gTbaxaVLvsg-unsplash.jpg" 
+                            sizes="(max-width: 768px) 750px, (max-width: 992px) 1499px, (min-width: 992px) 2997px, 5993px"
+                            alt="Chambre lit double et lit simple de l'Hôtel du port" 
+                        >
                         <div class="card__content">
                             <h3>Hôtel du port</h3>
                             <p>Nuit à partir de 52€</p>
@@ -108,7 +120,13 @@
                 </article>
                 <article class="card card--border">
                     <a href="#">
-                        <img class="card__img" src="assets/reisetopia-B8WIgxA_PFU-unsplash.jpg" alt="Chambre avec penderie de l'Hôtel Les mouettes" >
+                        <img 
+                            class="card__img" 
+                            srcset="assets/hebergements/1_xlarge/reisetopia-B8WIgxA_PFU-unsplash.jpg 5993w, assets/hebergements/2_large/reisetopia-B8WIgxA_PFU-unsplash.jpg 2997w, assets/hebergements/3_medium/reisetopia-B8WIgxA_PFU-unsplash.jpg 1499w, assets/hebergements/4_small/reisetopia-B8WIgxA_PFU-unsplash.jpg 750w"
+                            src="assets/hebergements/4_small/reisetopia-B8WIgxA_PFU-unsplash.jpg" 
+                            sizes="(max-width: 768px) 750px, (max-width: 992px) 1499px, (min-width: 992px) 2997px, 5993px"
+                            alt="Chambre avec penderie de l'Hôtel Les mouettes" 
+                        >
                         <div class="card__content">
                             <h3>Hôtel Les mouettes</h3>
                             <p>Nuit à partir de 76€</p>
@@ -124,7 +142,13 @@
                 </article>
                 <article class="card card--border">
                     <a href="#">
-                        <img class="card__img" src="assets/annie-spratt-Eg1qcIitAuA-unsplash.jpg" alt="Chambre bleue et blanc avec lit double et deux tables de chevet de l'Hôtel de la mer" >
+                        <img 
+                            class="card__img" 
+                            srcset="assets/hebergements/1_xlarge/annie-spratt-Eg1qcIitAuA-unsplash.jpg 5993w, assets/hebergements/2_large/annie-spratt-Eg1qcIitAuA-unsplash.jpg 2997w, assets/hebergements/3_medium/annie-spratt-Eg1qcIitAuA-unsplash.jpg 1499w, assets/hebergements/4_small/annie-spratt-Eg1qcIitAuA-unsplash.jpg 750w"
+                            src="assets/hebergements/4_small/annie-spratt-Eg1qcIitAuA-unsplash.jpg" 
+                            sizes="(max-width: 768px) 750px, (max-width: 992px) 1499px, (min-width: 992px) 2997px, 5993px"
+                            alt="Chambre bleue et blanc avec lit double et deux tables de chevet de l'Hôtel de la mer" 
+                        >
                         <div class="card__content">
                             <h3>Hôtel de la mer</h3>
                             <p>Nuit à partir de 46€</p>
@@ -140,7 +164,13 @@
                 </article>
                 <article class="card card--border">
                     <a href="#">
-                        <img class="card__img" src="assets/nicate-lee-kT-ZyaiwBe0-unsplash.jpg" alt="Chambre dortoire et ses lits à rideaux de l'Auberge Le Panier" >
+                        <img 
+                            class="card__img" 
+                            srcset="assets/hebergements/1_xlarge/nicate-lee-kT-ZyaiwBe0-unsplash.jpg 5993w, assets/hebergements/2_large/nicate-lee-kT-ZyaiwBe0-unsplash.jpg 2997w, assets/hebergements/3_medium/nicate-lee-kT-ZyaiwBe0-unsplash.jpg 1499w, assets/hebergements/4_small/nicate-lee-kT-ZyaiwBe0-unsplash.jpg 750w"
+                            src="assets/hebergements/4_small/nicate-lee-kT-ZyaiwBe0-unsplash.jpg" 
+                            sizes="(max-width: 768px) 750px, (max-width: 992px) 1499px, (min-width: 992px) 2997px, 5993px"
+                            alt="Chambre dortoire et ses lits à rideaux de l'Auberge Le Panier" 
+                        >
                         <div class="card__content">
                             <h3>Auberge Le Panier</h3>
                             <p>Nuit à partir de 23€</p>
@@ -156,7 +186,13 @@
                 </article>
                 <article class="card card--border">
                     <a href="#">
-                        <img class="card__img" src="assets/febrian-zakaria-M6S1WvfW68A-unsplash.jpg" alt="Chambre lumineuse et son lit double avec télévision, coin bureau et fenêtre de l'Hôtel Chez Amina" >
+                        <img 
+                            class="card__img" 
+                            srcset="assets/hebergements/1_xlarge/febrian-zakaria-M6S1WvfW68A-unsplash.jpg 5993w, assets/hebergements/2_large/febrian-zakaria-M6S1WvfW68A-unsplash.jpg 2997w, assets/hebergements/3_medium/febrian-zakaria-M6S1WvfW68A-unsplash.jpg 1499w, assets/hebergements/4_small/febrian-zakaria-M6S1WvfW68A-unsplash.jpg 750w"
+                            src="assets/hebergements/4_small/febrian-zakaria-M6S1WvfW68A-unsplash.jpg" 
+                            sizes="(max-width: 768px) 750px, (max-width: 992px) 1499px, (min-width: 992px) 2997px, 5993px"
+                            alt="Chambre lumineuse et son lit double avec télévision, coin bureau et fenêtre de l'Hôtel Chez Amina" 
+                        >
                         <div class="card__content">
                             <h3>Hôtel Chez Amina</h3>
                             <p>Nuit à partir de 96€</p>
@@ -176,7 +212,13 @@
                 <h2>Les plus populaires <i class="fa-solid fa-chart-line"></i></h2>
                 <article class="card card--border">
                     <a href="#">
-                        <img class="card__img" src="assets/emile-guillemot-Bj_rcSC5XfE-unsplash.jpg" alt="Chambre de style Art déco avec lit double de Hôtel Le soleil du matin" >
+                        <img 
+                            class="card__img" 
+                            srcset="assets/hebergements/1_xlarge/emile-guillemot-Bj_rcSC5XfE-unsplash.jpg 5993w, assets/hebergements/2_large/emile-guillemot-Bj_rcSC5XfE-unsplash.jpg 2997w, assets/hebergements/3_medium/emile-guillemot-Bj_rcSC5XfE-unsplash.jpg 1499w, assets/hebergements/4_small/emile-guillemot-Bj_rcSC5XfE-unsplash.jpg 750w"
+                            src="assets/hebergements/4_small/emile-guillemot-Bj_rcSC5XfE-unsplash.jpg" 
+                            sizes="(max-width: 768px) 750px, (max-width: 992px) 1499px, (min-width: 992px) 2997px, 5993px"
+                            alt="Chambre de style Art déco avec lit double de Hôtel Le soleil du matin" 
+                        >
                         <div class="card__content">
                             <h3>Hôtel Le soleil du matin</h3>
                             <p>Nuit à partir de 128€</p>
@@ -192,7 +234,13 @@
                 </article>
                 <article class="card card--border">
                     <a href="#">
-                        <img class="card__img" src="assets/aw-creative-VGs8z60yT2c-unsplash.jpg" alt="Chambre d'hôtes du domaine Au coeur de l'eau à la décoration moderne et épurée avec lit double" >
+                        <img 
+                            class="card__img" 
+                            srcset="assets/hebergements/1_xlarge/aw-creative-VGs8z60yT2c-unsplash.jpg 5993w, assets/hebergements/2_large/aw-creative-VGs8z60yT2c-unsplash.jpg 2997w, assets/hebergements/3_medium/aw-creative-VGs8z60yT2c-unsplash.jpg 1499w, assets/hebergements/4_small/aw-creative-VGs8z60yT2c-unsplash.jpg 750w"
+                            src="assets/hebergements/4_small/aw-creative-VGs8z60yT2c-unsplash.jpg" 
+                            sizes="(max-width: 768px) 750px, (max-width: 992px) 1499px, (min-width: 992px) 2997px, 5993px"
+                            alt="Chambre d'hôtes du domaine Au coeur de l'eau à la décoration moderne et épurée avec lit double" 
+                        >
                         <div class="card__content">
                             <h3>Chambres d'hôtes Au coeur de l'eau</h3>
                             <p>Nuit à partir de 71€</p>
@@ -208,7 +256,13 @@
                 </article>
                 <article class="card card--border">
                     <a href="#">
-                        <img class="card__img" src="assets/febrian-zakaria-sjvU0THccQA-unsplash.jpg" alt="Chambre à lit double lumineuse de l'Hôtel Bleu et Blanc" >
+                        <img 
+                            class="card__img" 
+                            srcset="assets/hebergements/1_xlarge/febrian-zakaria-sjvU0THccQA-unsplash.jpg 5993w, assets/hebergements/2_large/febrian-zakaria-sjvU0THccQA-unsplash.jpg 2997w, assets/hebergements/3_medium/febrian-zakaria-sjvU0THccQA-unsplash.jpg 1499w, assets/hebergements/4_small/febrian-zakaria-sjvU0THccQA-unsplash.jpg 750w"
+                            src="assets/hebergements/4_small/febrian-zakaria-sjvU0THccQA-unsplash.jpg" 
+                            sizes="(max-width: 768px) 750px, (max-width: 992px) 1499px, (min-width: 992px) 2997px, 5993px"
+                            alt="Chambre à lit double lumineuse de l'Hôtel Bleu et Blanc" 
+                        >
                         <div class="card__content">
                             <h3>Hôtel Bleu et Blanc</h3>
                             <p>Nuit à partir de 68€</p>
@@ -228,7 +282,13 @@
             <h2>Activités à Marseille</h2>
             <div class="card">
                <a href="#">
-                    <img class="card__img" src="assets/reno-laithienne-QUgJhdY5Fyk-unsplash.jpg" alt="Vue sur les bâteaux et habitations en bordure du Vieux-Port de Marseille" >
+                    <img 
+                        class="card__img" 
+                        srcset="assets/activites/1_xlarge/reno-laithienne-QUgJhdY5Fyk-unsplash.jpg 5993w, assets/activites/2_large/reno-laithienne-QUgJhdY5Fyk-unsplash.jpg 2997w, assets/activites/3_medium/reno-laithienne-QUgJhdY5Fyk-unsplash.jpg 1499w, assets/activites/4_small/reno-laithienne-QUgJhdY5Fyk-unsplash.jpg 750w"
+                        src="assets/activites/4_small/reno-laithienne-QUgJhdY5Fyk-unsplash.jpg" 
+                        sizes="(max-width: 768px) 750px, (max-width: 992px) 1499px, (min-width: 992px) 2997px, 5993px"
+                        alt="Vue sur les bâteaux et habitations en bordure du Vieux-Port de Marseille" 
+                    >
                     <div class="card__content">
                         <p>Vieux-Port</p>
                     </div>
@@ -236,7 +296,13 @@
             </div>
             <div class="card">
                <a href="#">
-                    <img class="card__img" src="assets/paul-hermann-QFTrLdQIRhI-unsplash.jpg" alt="Vue en contrebas depuis les rochers aux alentours du Fort de Pomègues" >
+                    <img 
+                        class="card__img" 
+                        srcset="assets/activites/1_xlarge/paul-hermann-QFTrLdQIRhI-unsplash.jpg 5993w, assets/activites/2_large/paul-hermann-QFTrLdQIRhI-unsplash.jpg 2997w, assets/activites/3_medium/paul-hermann-QFTrLdQIRhI-unsplash.jpg 1499w, assets/activites/4_small/paul-hermann-QFTrLdQIRhI-unsplash.jpg 750w"
+                        src="assets/activites/4_small/paul-hermann-QFTrLdQIRhI-unsplash.jpg" 
+                        sizes="(max-width: 768px) 750px, (max-width: 992px) 1499px, (min-width: 992px) 2997px, 5993px"
+                        alt="Vue en contrebas depuis les rochers aux alentours du Fort de Pomègues" 
+                    >
                     <div class="card__content">
                         <p>Fort de Pomègues</p>
                     </div>
@@ -244,7 +310,13 @@
             </div>
             <div class="card">
                <a href="#">
-                    <img class="card__img" src="assets/kilyan-sockalingum-NR8-cBCN3aI-unsplash.jpg" alt="Vue plongeante sur le Parc national des Calanques depuis la côte avec la mer au loin" >
+                    <img 
+                        class="card__img" 
+                        srcset="assets/activites/1_xlarge/kilyan-sockalingum-NR8-cBCN3aI-unsplash.jpg 5993w, assets/activites/2_large/kilyan-sockalingum-NR8-cBCN3aI-unsplash.jpg 2997w, assets/activites/3_medium/kilyan-sockalingum-NR8-cBCN3aI-unsplash.jpg 1499w, assets/activites/4_small/kilyan-sockalingum-NR8-cBCN3aI-unsplash.jpg 750w"
+                        src="assets/activites/4_small/kilyan-sockalingum-NR8-cBCN3aI-unsplash.jpg" 
+                        sizes="(max-width: 768px) 750px, (max-width: 992px) 1499px, (min-width: 992px) 2997px, 5993px"
+                        alt="Vue plongeante sur le Parc national des Calanques depuis la côte avec la mer au loin" 
+                    >
                     <div class="card__content">
                         <p>Parc national des Calanques</p>
                     </div>
@@ -252,7 +324,13 @@
             </div>
             <div class="card">
                <a href="#">
-                    <img class="card__img" src="assets/florian-wehde-xW9e8gdotxI-unsplash.jpg" alt="Vue sur les toits des quartiers de Marseille surplombés par la basilique Notre-Dame-de-la-Garde" >
+                    <img 
+                        class="card__img" 
+                        srcset="assets/activites/1_xlarge/florian-wehde-xW9e8gdotxI-unsplash.jpg 5993w, assets/activites/2_large/florian-wehde-xW9e8gdotxI-unsplash.jpg 2997w, assets/activites/3_medium/florian-wehde-xW9e8gdotxI-unsplash.jpg 1499w, assets/activites/4_small/florian-wehde-xW9e8gdotxI-unsplash.jpg 750w"
+                        src="assets/activites/4_small/florian-wehde-xW9e8gdotxI-unsplash.jpg" 
+                        sizes="(max-width: 768px) 750px, (max-width: 992px) 1499px, (min-width: 992px) 2997px, 5993px"
+                        alt="Vue sur les toits des quartiers de Marseille surplombés par la basilique Notre-Dame-de-la-Garde" 
+                    >
                     <div class="card__content">
                         <p>Notre-Dame-de-la-Garde</p>
                     </div>
