--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 </head>
 <body>
     <header>
-        <img class="logo" src="assets/logo/Booki@3x.png" alt="Logo de Booki">
+        <img class="logo" src="images/logo/Booki@3x.png" alt="Logo de Booki">
         <nav class="navbar">
             <ul class="navbar-nav">
                 <li class="nav__item">
@@ -78,8 +78,8 @@
                     <a href="#">
                         <img 
                             class="card__img" 
-                            srcset="assets/hebergements/1_xlarge/marcus-loke-WQJvWU_HZFo-unsplash.jpg 5993w, assets/hebergements/2_large/marcus-loke-WQJvWU_HZFo-unsplash.jpg 2997w, assets/hebergements/3_medium/marcus-loke-WQJvWU_HZFo-unsplash.jpg 1499w, assets/hebergements/4_small/marcus-loke-WQJvWU_HZFo-unsplash.jpg 750w"
-                            src="assets/hebergements/4_small/marcus-loke-WQJvWU_HZFo-unsplash.jpg" 
+                            srcset="images/hebergements/1_xlarge/marcus-loke-WQJvWU_HZFo-unsplash.jpg 5993w, images/hebergements/2_large/marcus-loke-WQJvWU_HZFo-unsplash.jpg 2997w, images/hebergements/3_medium/marcus-loke-WQJvWU_HZFo-unsplash.jpg 1499w, images/hebergements/4_small/marcus-loke-WQJvWU_HZFo-unsplash.jpg 750w"
+                            src="images/hebergements/4_small/marcus-loke-WQJvWU_HZFo-unsplash.jpg" 
                             sizes="(max-width: 768px) 750px, (max-width: 992px) 1499px, (min-width: 992px) 2997px, 5993px"
                             alt="Chambre dortoire avec vue sur rue de l'Auberge La Canebière" 
                         >
@@ -100,8 +100,8 @@
                     <a href="#">
                         <img 
                             class="card__img" 
-                            srcset="assets/hebergements/1_xlarge/fred-kleber-gTbaxaVLvsg-unsplash.jpg 5993w, assets/hebergements/2_large/fred-kleber-gTbaxaVLvsg-unsplash.jpg 2997w, assets/hebergements/3_medium/fred-kleber-gTbaxaVLvsg-unsplash.jpg 1499w, assets/hebergements/4_small/fred-kleber-gTbaxaVLvsg-unsplash.jpg 750w"
-                            src="assets/hebergements/4_small/fred-kleber-gTbaxaVLvsg-unsplash.jpg" 
+                            srcset="images/hebergements/1_xlarge/fred-kleber-gTbaxaVLvsg-unsplash.jpg 5993w, images/hebergements/2_large/fred-kleber-gTbaxaVLvsg-unsplash.jpg 2997w, images/hebergements/3_medium/fred-kleber-gTbaxaVLvsg-unsplash.jpg 1499w, images/hebergements/4_small/fred-kleber-gTbaxaVLvsg-unsplash.jpg 750w"
+                            src="images/hebergements/4_small/fred-kleber-gTbaxaVLvsg-unsplash.jpg" 
                             sizes="(max-width: 768px) 750px, (max-width: 992px) 1499px, (min-width: 992px) 2997px, 5993px"
                             alt="Chambre lit double et lit simple de l'Hôtel du port" 
                         >
@@ -122,8 +122,8 @@
                     <a href="#">
                         <img 
                             class="card__img" 
-                            srcset="assets/hebergements/1_xlarge/reisetopia-B8WIgxA_PFU-unsplash.jpg 5993w, assets/hebergements/2_large/reisetopia-B8WIgxA_PFU-unsplash.jpg 2997w, assets/hebergements/3_medium/reisetopia-B8WIgxA_PFU-unsplash.jpg 1499w, assets/hebergements/4_small/reisetopia-B8WIgxA_PFU-unsplash.jpg 750w"
-                            src="assets/hebergements/4_small/reisetopia-B8WIgxA_PFU-unsplash.jpg" 
+                            srcset="images/hebergements/1_xlarge/reisetopia-B8WIgxA_PFU-unsplash.jpg 5993w, images/hebergements/2_large/reisetopia-B8WIgxA_PFU-unsplash.jpg 2997w, images/hebergements/3_medium/reisetopia-B8WIgxA_PFU-unsplash.jpg 1499w, images/hebergements/4_small/reisetopia-B8WIgxA_PFU-unsplash.jpg 750w"
+                            src="images/hebergements/4_small/reisetopia-B8WIgxA_PFU-unsplash.jpg" 
                             sizes="(max-width: 768px) 750px, (max-width: 992px) 1499px, (min-width: 992px) 2997px, 5993px"
                             alt="Chambre avec penderie de l'Hôtel Les mouettes" 
                         >
@@ -144,8 +144,8 @@
                     <a href="#">
                         <img 
                             class="card__img" 
-                            srcset="assets/hebergements/1_xlarge/annie-spratt-Eg1qcIitAuA-unsplash.jpg 5993w, assets/hebergements/2_large/annie-spratt-Eg1qcIitAuA-unsplash.jpg 2997w, assets/hebergements/3_medium/annie-spratt-Eg1qcIitAuA-unsplash.jpg 1499w, assets/hebergements/4_small/annie-spratt-Eg1qcIitAuA-unsplash.jpg 750w"
-                            src="assets/hebergements/4_small/annie-spratt-Eg1qcIitAuA-unsplash.jpg" 
+                            srcset="images/hebergements/1_xlarge/annie-spratt-Eg1qcIitAuA-unsplash.jpg 5993w, images/hebergements/2_large/annie-spratt-Eg1qcIitAuA-unsplash.jpg 2997w, images/hebergements/3_medium/annie-spratt-Eg1qcIitAuA-unsplash.jpg 1499w, images/hebergements/4_small/annie-spratt-Eg1qcIitAuA-unsplash.jpg 750w"
+                            src="images/hebergements/4_small/annie-spratt-Eg1qcIitAuA-unsplash.jpg" 
                             sizes="(max-width: 768px) 750px, (max-width: 992px) 1499px, (min-width: 992px) 2997px, 5993px"
                             alt="Chambre bleue et blanc avec lit double et deux tables de chevet de l'Hôtel de la mer" 
                         >
@@ -166,8 +166,8 @@
                     <a href="#">
                         <img 
                             class="card__img" 
-                            srcset="assets/hebergements/1_xlarge/nicate-lee-kT-ZyaiwBe0-unsplash.jpg 5993w, assets/hebergements/2_large/nicate-lee-kT-ZyaiwBe0-unsplash.jpg 2997w, assets/hebergements/3_medium/nicate-lee-kT-ZyaiwBe0-unsplash.jpg 1499w, assets/hebergements/4_small/nicate-lee-kT-ZyaiwBe0-unsplash.jpg 750w"
-                            src="assets/hebergements/4_small/nicate-lee-kT-ZyaiwBe0-unsplash.jpg" 
+                            srcset="images/hebergements/1_xlarge/nicate-lee-kT-ZyaiwBe0-unsplash.jpg 5993w, images/hebergements/2_large/nicate-lee-kT-ZyaiwBe0-unsplash.jpg 2997w, images/hebergements/3_medium/nicate-lee-kT-ZyaiwBe0-unsplash.jpg 1499w, images/hebergements/4_small/nicate-lee-kT-ZyaiwBe0-unsplash.jpg 750w"
+                            src="images/hebergements/4_small/nicate-lee-kT-ZyaiwBe0-unsplash.jpg" 
                             sizes="(max-width: 768px) 750px, (max-width: 992px) 1499px, (min-width: 992px) 2997px, 5993px"
                             alt="Chambre dortoire et ses lits à rideaux de l'Auberge Le Panier" 
                         >
@@ -188,8 +188,8 @@
                     <a href="#">
                         <img 
                             class="card__img" 
-                            srcset="assets/hebergements/1_xlarge/febrian-zakaria-M6S1WvfW68A-unsplash.jpg 5993w, assets/hebergements/2_large/febrian-zakaria-M6S1WvfW68A-unsplash.jpg 2997w, assets/hebergements/3_medium/febrian-zakaria-M6S1WvfW68A-unsplash.jpg 1499w, assets/hebergements/4_small/febrian-zakaria-M6S1WvfW68A-unsplash.jpg 750w"
-                            src="assets/hebergements/4_small/febrian-zakaria-M6S1WvfW68A-unsplash.jpg" 
+                            srcset="images/hebergements/1_xlarge/febrian-zakaria-M6S1WvfW68A-unsplash.jpg 5993w, images/hebergements/2_large/febrian-zakaria-M6S1WvfW68A-unsplash.jpg 2997w, images/hebergements/3_medium/febrian-zakaria-M6S1WvfW68A-unsplash.jpg 1499w, images/hebergements/4_small/febrian-zakaria-M6S1WvfW68A-unsplash.jpg 750w"
+                            src="images/hebergements/4_small/febrian-zakaria-M6S1WvfW68A-unsplash.jpg" 
                             sizes="(max-width: 768px) 750px, (max-width: 992px) 1499px, (min-width: 992px) 2997px, 5993px"
                             alt="Chambre lumineuse et son lit double avec télévision, coin bureau et fenêtre de l'Hôtel Chez Amina" 
                         >
@@ -214,8 +214,8 @@
                     <a href="#">
                         <img 
                             class="card__img" 
-                            srcset="assets/hebergements/1_xlarge/emile-guillemot-Bj_rcSC5XfE-unsplash.jpg 5993w, assets/hebergements/2_large/emile-guillemot-Bj_rcSC5XfE-unsplash.jpg 2997w, assets/hebergements/3_medium/emile-guillemot-Bj_rcSC5XfE-unsplash.jpg 1499w, assets/hebergements/4_small/emile-guillemot-Bj_rcSC5XfE-unsplash.jpg 750w"
-                            src="assets/hebergements/4_small/emile-guillemot-Bj_rcSC5XfE-unsplash.jpg" 
+                            srcset="images/hebergements/1_xlarge/emile-guillemot-Bj_rcSC5XfE-unsplash.jpg 5993w, images/hebergements/2_large/emile-guillemot-Bj_rcSC5XfE-unsplash.jpg 2997w, images/hebergements/3_medium/emile-guillemot-Bj_rcSC5XfE-unsplash.jpg 1499w, images/hebergements/4_small/emile-guillemot-Bj_rcSC5XfE-unsplash.jpg 750w"
+                            src="images/hebergements/4_small/emile-guillemot-Bj_rcSC5XfE-unsplash.jpg" 
                             sizes="(max-width: 768px) 750px, (max-width: 992px) 1499px, (min-width: 992px) 2997px, 5993px"
                             alt="Chambre de style Art déco avec lit double de Hôtel Le soleil du matin" 
                         >
@@ -236,8 +236,8 @@
                     <a href="#">
                         <img 
                             class="card__img" 
-                            srcset="assets/hebergements/1_xlarge/aw-creative-VGs8z60yT2c-unsplash.jpg 5993w, assets/hebergements/2_large/aw-creative-VGs8z60yT2c-unsplash.jpg 2997w, assets/hebergements/3_medium/aw-creative-VGs8z60yT2c-unsplash.jpg 1499w, assets/hebergements/4_small/aw-creative-VGs8z60yT2c-unsplash.jpg 750w"
-                            src="assets/hebergements/4_small/aw-creative-VGs8z60yT2c-unsplash.jpg" 
+                            srcset="images/hebergements/1_xlarge/aw-creative-VGs8z60yT2c-unsplash.jpg 5993w, images/hebergements/2_large/aw-creative-VGs8z60yT2c-unsplash.jpg 2997w, images/hebergements/3_medium/aw-creative-VGs8z60yT2c-unsplash.jpg 1499w, images/hebergements/4_small/aw-creative-VGs8z60yT2c-unsplash.jpg 750w"
+                            src="images/hebergements/4_small/aw-creative-VGs8z60yT2c-unsplash.jpg" 
                             sizes="(max-width: 768px) 750px, (max-width: 992px) 1499px, (min-width: 992px) 2997px, 5993px"
                             alt="Chambre d'hôtes du domaine Au coeur de l'eau à la décoration moderne et épurée avec lit double" 
                         >
@@ -258,8 +258,8 @@
                     <a href="#">
                         <img 
                             class="card__img" 
-                            srcset="assets/hebergements/1_xlarge/febrian-zakaria-sjvU0THccQA-unsplash.jpg 5993w, assets/hebergements/2_large/febrian-zakaria-sjvU0THccQA-unsplash.jpg 2997w, assets/hebergements/3_medium/febrian-zakaria-sjvU0THccQA-unsplash.jpg 1499w, assets/hebergements/4_small/febrian-zakaria-sjvU0THccQA-unsplash.jpg 750w"
-                            src="assets/hebergements/4_small/febrian-zakaria-sjvU0THccQA-unsplash.jpg" 
+                            srcset="images/hebergements/1_xlarge/febrian-zakaria-sjvU0THccQA-unsplash.jpg 5993w, images/hebergements/2_large/febrian-zakaria-sjvU0THccQA-unsplash.jpg 2997w, images/hebergements/3_medium/febrian-zakaria-sjvU0THccQA-unsplash.jpg 1499w, images/hebergements/4_small/febrian-zakaria-sjvU0THccQA-unsplash.jpg 750w"
+                            src="images/hebergements/4_small/febrian-zakaria-sjvU0THccQA-unsplash.jpg" 
                             sizes="(max-width: 768px) 750px, (max-width: 992px) 1499px, (min-width: 992px) 2997px, 5993px"
                             alt="Chambre à lit double lumineuse de l'Hôtel Bleu et Blanc" 
                         >
@@ -284,8 +284,8 @@
                <a href="#">
                     <img 
                         class="card__img" 
-                        srcset="assets/activites/1_xlarge/reno-laithienne-QUgJhdY5Fyk-unsplash.jpg 5993w, assets/activites/2_large/reno-laithienne-QUgJhdY5Fyk-unsplash.jpg 2997w, assets/activites/3_medium/reno-laithienne-QUgJhdY5Fyk-unsplash.jpg 1499w, assets/activites/4_small/reno-laithienne-QUgJhdY5Fyk-unsplash.jpg 750w"
-                        src="assets/activites/4_small/reno-laithienne-QUgJhdY5Fyk-unsplash.jpg" 
+                        srcset="images/activites/1_xlarge/reno-laithienne-QUgJhdY5Fyk-unsplash.jpg 5993w, images/activites/2_large/reno-laithienne-QUgJhdY5Fyk-unsplash.jpg 2997w, images/activites/3_medium/reno-laithienne-QUgJhdY5Fyk-unsplash.jpg 1499w, images/activites/4_small/reno-laithienne-QUgJhdY5Fyk-unsplash.jpg 750w"
+                        src="images/activites/4_small/reno-laithienne-QUgJhdY5Fyk-unsplash.jpg" 
                         sizes="(max-width: 768px) 750px, (max-width: 992px) 1499px, (min-width: 992px) 2997px, 5993px"
                         alt="Vue sur les bâteaux et habitations en bordure du Vieux-Port de Marseille" 
                     >
@@ -298,8 +298,8 @@
                <a href="#">
                     <img 
                         class="card__img" 
-                        srcset="assets/activites/1_xlarge/paul-hermann-QFTrLdQIRhI-unsplash.jpg 5993w, assets/activites/2_large/paul-hermann-QFTrLdQIRhI-unsplash.jpg 2997w, assets/activites/3_medium/paul-hermann-QFTrLdQIRhI-unsplash.jpg 1499w, assets/activites/4_small/paul-hermann-QFTrLdQIRhI-unsplash.jpg 750w"
-                        src="assets/activites/4_small/paul-hermann-QFTrLdQIRhI-unsplash.jpg" 
+                        srcset="images/activites/1_xlarge/paul-hermann-QFTrLdQIRhI-unsplash.jpg 5993w, images/activites/2_large/paul-hermann-QFTrLdQIRhI-unsplash.jpg 2997w, images/activites/3_medium/paul-hermann-QFTrLdQIRhI-unsplash.jpg 1499w, images/activites/4_small/paul-hermann-QFTrLdQIRhI-unsplash.jpg 750w"
+                        src="images/activites/4_small/paul-hermann-QFTrLdQIRhI-unsplash.jpg" 
                         sizes="(max-width: 768px) 750px, (max-width: 992px) 1499px, (min-width: 992px) 2997px, 5993px"
                         alt="Vue en contrebas depuis les rochers aux alentours du Fort de Pomègues" 
                     >
@@ -312,8 +312,8 @@
                <a href="#">
                     <img 
                         class="card__img" 
-                        srcset="assets/activites/1_xlarge/kilyan-sockalingum-NR8-cBCN3aI-unsplash.jpg 5993w, assets/activites/2_large/kilyan-sockalingum-NR8-cBCN3aI-unsplash.jpg 2997w, assets/activites/3_medium/kilyan-sockalingum-NR8-cBCN3aI-unsplash.jpg 1499w, assets/activites/4_small/kilyan-sockalingum-NR8-cBCN3aI-unsplash.jpg 750w"
-                        src="assets/activites/4_small/kilyan-sockalingum-NR8-cBCN3aI-unsplash.jpg" 
+                        srcset="images/activites/1_xlarge/kilyan-sockalingum-NR8-cBCN3aI-unsplash.jpg 5993w, images/activites/2_large/kilyan-sockalingum-NR8-cBCN3aI-unsplash.jpg 2997w, images/activites/3_medium/kilyan-sockalingum-NR8-cBCN3aI-unsplash.jpg 1499w, images/activites/4_small/kilyan-sockalingum-NR8-cBCN3aI-unsplash.jpg 750w"
+                        src="images/activites/4_small/kilyan-sockalingum-NR8-cBCN3aI-unsplash.jpg" 
                         sizes="(max-width: 768px) 750px, (max-width: 992px) 1499px, (min-width: 992px) 2997px, 5993px"
                         alt="Vue plongeante sur le Parc national des Calanques depuis la côte avec la mer au loin" 
                     >
@@ -326,8 +326,8 @@
                <a href="#">
                     <img 
                         class="card__img" 
-                        srcset="assets/activites/1_xlarge/florian-wehde-xW9e8gdotxI-unsplash.jpg 5993w, assets/activites/2_large/florian-wehde-xW9e8gdotxI-unsplash.jpg 2997w, assets/activites/3_medium/florian-wehde-xW9e8gdotxI-unsplash.jpg 1499w, assets/activites/4_small/florian-wehde-xW9e8gdotxI-unsplash.jpg 750w"
-                        src="assets/activites/4_small/florian-wehde-xW9e8gdotxI-unsplash.jpg" 
+                        srcset="images/activites/1_xlarge/florian-wehde-xW9e8gdotxI-unsplash.jpg 5993w, images/activites/2_large/florian-wehde-xW9e8gdotxI-unsplash.jpg 2997w, images/activites/3_medium/florian-wehde-xW9e8gdotxI-unsplash.jpg 1499w, images/activites/4_small/florian-wehde-xW9e8gdotxI-unsplash.jpg 750w"
+                        src="images/activites/4_small/florian-wehde-xW9e8gdotxI-unsplash.jpg" 
                         sizes="(max-width: 768px) 750px, (max-width: 992px) 1499px, (min-width: 992px) 2997px, 5993px"
                         alt="Vue sur les toits des quartiers de Marseille surplombés par la basilique Notre-Dame-de-la-Garde" 
                     >
